external-crates/move/crates/move-compiler/tests/move_check/parser/function_params_missing.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/function_params_missing.move:3:12
  │
3 │     fun fn { }
  │            ^
  │            │
  │            Unexpected '{'
  │            Expected '('

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/function_params_missing.move:3:12
  │
3 │     fun fn { }
  │            ^
  │            │
  │            Unexpected '{'
  │            Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

