external-crates/move/crates/move-compiler/tests/move_check/parser/function_params_missing.move
module 0x42::M {
    // The function parameters (in parens) must always be specified.
    fun fn { }
}
